[project]
name = "batchwizard"
dynamic = ["version"]
description = "BatchWizard: Manage OpenAI batch processing jobs with ease"
readme = "README.md"
license = "MIT"
authors = [{ name = "Carl Kugblenu" }]
requires-python = ">=3.11"
keywords = ["openai", "batch", "cli", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "openai>=1.37",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "aiofiles>=24.1",
    "loguru>=0.7",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/cmakafui/batchwizard"
Repository = "https://github.com/cmakafui/batchwizard"
Issues = "https://github.com/cmakafui/batchwizard/issues"

[project.scripts]
batchwizard = "batchwizard.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/batchwizard"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer declares CLI params via function-call defaults by design
"src/batchwizard/cli.py" = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
